--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": ["./**/*.ts", "./*.json"]
 }
