chore: adds push notifications logic

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-cron": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "web-push": "^3.6.6",
     "winston": "^3.10.0",
     "winston-transport": "^4.5.0"
   },
